--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,8 +1,12 @@
+.navigation {
+  border-bottom: 1px solid rgb(239, 239, 239);
+}
+
 /* Вверхняя навигация */
 .navigation__wrapper {
-  min-height: 62px;
   background-color: #efefef;
   margin-bottom: 30px;
+  min-height: 62px;
 }
 
 .navigation__header {
@@ -10,7 +14,7 @@
   max-width: 1170px;
   justify-content: space-between;
   align-items: center;
-  height: 62px;
+  min-height: 62px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -23,10 +27,13 @@
   line-height: 25px;
   font-weight: 600;
   color: #ffffff;
-  padding-top: 19px;
-  padding-bottom: 19px;
-  padding-left: 61px;
-  padding-right: 51px;
+  letter-spacing: 0.059em;
+  width: 263px;
+  min-height: 61px;
+  padding-top: 15px;
+  padding-bottom: 16px;
+  padding-left: 41px;
+  padding-right: 30px;
   border-radius: 3px;
   background: linear-gradient(
     270deg,
@@ -40,8 +47,8 @@
     width: 25px;
     height: 18px;
     background-image: url("../img/burger-icon.png");
-    top: 21px;
-    left: 21px;
+    top: 22px;
+    left: 17px;
   }
 
   &::after {
@@ -93,3 +100,279 @@
 }
 
 /* Нижняя навигация */
+.navigation__bottom {
+  display: flex;
+  max-width: 1170px;
+  min-height: 712px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-bottom: 1px solid rgb(239, 239, 239);
+}
+
+.navigation__products_list {
+  list-style: none;
+  min-width: 263px;
+  font-family: $textPantonBold;
+  font-size: 15px;
+  line-height: 20px;
+  font-weight: 700;
+  margin-right: 30px;
+}
+
+.navigation__products_list li {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 46px;
+  background-color: #efefef;
+  padding: 14px 61px;
+  margin-bottom: 2px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 12px;
+    height: 12px;
+    border: 3px solid rgb(29, 30, 30);
+    border-radius: 50%;
+    top: 18x;
+    left: 21px;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 7px;
+    height: 12px;
+    background-image: url("../img/arrow-right-icon.png");
+    background-size: cover;
+    top: 18px;
+    right: 20px;
+  }
+
+  &:hover {
+    opacity: 0.5;
+  }
+
+  &:last-child {
+    box-shadow: 0 25px 15px -18px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.navigation__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.preview__list {
+  display: flex;
+  list-style: none;
+}
+
+.navigation_preview {
+  position: relative;
+}
+
+.preview__lis_item {
+  position: relative;
+  width: 847px;
+  min-height: 409px;
+  border-radius: 5px;
+  background: linear-gradient(
+    90deg,
+    rgb(1, 135, 193) 0%,
+    rgb(58, 192, 239) 100%
+  );
+  padding-left: 41px;
+  padding-top: 65px;
+  padding-bottom: 30px;
+  padding-right: 475px;
+  margin-bottom: 29px;
+  box-shadow: 0 100px 25px -90px rgba(0, 0, 0, 0.2);
+}
+
+.preview__lis_item h3 {
+  font-family: $textPantonExtraBold;
+  font-size: 40px;
+  line-height: 50px;
+  font-weight: 800;
+  color: #ffffff;
+  text-transform: uppercase;
+  margin-bottom: 27px;
+}
+
+.preview__lis_item p {
+  font-family: $textPantonSemiBold;
+  font-size: 22px;
+  line-height: 30px;
+  font-weight: 600;
+  color: #4bd1fe;
+  margin-bottom: 14px;
+}
+
+.preview__lis_item span {
+  font-family: $textPanton;
+  font-size: 30px;
+  line-height: 45px;
+  font-weight: 400;
+  color: #ffffff;
+  margin-bottom: 29px;
+}
+
+.preview__lis_item a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 174px;
+  min-height: 54px;
+  font-family: $textPantonBold;
+  font-size: 16px;
+  line-height: 25px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #1d1e1e;
+  padding: 12px 45px;
+
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
+.preview__lis_item img {
+  position: absolute;
+  width: 333px;
+  height: 426px;
+  bottom: 0;
+  right: 96px;
+}
+
+.preview__slides {
+  list-style: none;
+}
+
+.preview__slides {
+  position: absolute;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  min-width: 65px;
+  width: auto;
+  justify-content: space-between;
+  height: 15px;
+  bottom: 40px;
+  left: 41px;
+}
+
+.preview__slide {
+  cursor: pointer;
+  width: 10px;
+  height: 10px;
+  border: 3px solid #ffffff;
+  border-radius: 100%;
+
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
+.preview__slide_Active {
+  border-color: rgb(61, 195, 242);
+}
+
+.navigation__preview-links {
+  list-style: none;
+  display: flex;
+}
+
+.navigation__preview-links_item {
+  position: relative;
+  display: flex;
+  width: 262px;
+  height: 172px;
+  margin-right: 30px;
+  box-shadow: 0 30px 15px -18px rgba(0, 0, 0, 0.2);
+
+  &:last-of-type {
+    margin-right: 0;
+  }
+
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
+.navigation__preview-links_item a {
+  width: 100%;
+  height: 100%;
+  min-height: 172px;
+  border-radius: 5px;
+  background: linear-gradient(
+    90deg,
+    rgb(1, 135, 193) 0%,
+    rgb(58, 192, 239) 100%
+  );
+  padding-top: 26px;
+  padding-left: 23px;
+  padding-right: 124px;
+  padding-bottom: 21px;
+
+  &:nth-child(3n + 2) {
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+}
+
+.navigation__preview-links_item h4 {
+  position: relative;
+  font-family: $textPantonBold;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 16px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: rgb(29, 30, 30);
+    background-image: url("../img/arrow-right-icon-white.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 100px;
+    left: 0;
+  }
+}
+
+.navigation__preview-links_item p {
+  font-family: $textPantonSemiBold;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 600;
+  color: #4bd1fe;
+  margin-bottom: 14px;
+}
+
+.navigation__rawbite {
+  position: absolute;
+  bottom: -20px;
+  right: -20px;
+}
+
+.navigation__journal {
+  position: absolute;
+  bottom: -20px;
+  right: -20px;
+}
+
+.navigation__pike-fisherman {
+  position: absolute;
+  bottom: -27px;
+  right: 0;
+}
